# T-sne

./: .env.example  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  csv.txt  docker-compose.yml  requirement-old.md  requirement.md  setup.bat  setup.sh
.specify/memory/: constitution.md
backend/: __init__.py  main.py  pyproject.toml  requirements.txt  test_sample.csv
backend/src/: __init__.py
backend/src/algorithms/: base.py  pca.py  preprocessing.py  tsne.py
backend/src/api/: __init__.py  datasets.py  error_handlers.py  pipelines.py  processing.py  upload.py  visualizations.py  websocket.py
backend/src/cli/: batch_command.py  main.py  pca_command.py  tsne_command.py
backend/src/config/: __init__.py  logging_config.py  settings.py
backend/src/middleware/: graceful_degradation.py
backend/src/models/: category.py  dataset.py  pipeline.py  visualization.py
backend/src/services/: comparison_service.py  export_service.py  processing_service.py  upload_service.py  visualization_service.py
backend/src/utils/: __init__.py  error_handler.py  io.py  performance_monitor.py  progress_tracker.py  scientific_logging.py  temp_file_manager.py  user_messages.py  validation.py
backend/tests/: conftest.py
backend/tests/contract/: test_datasets.py  test_pipelines.py  test_processing.py  test_upload.py  test_visualizations.py  test_websocket.py
backend/tests/integration/: test_error_handling.py  test_full_workflow.py  test_parameters.py  test_performance.py  test_pipeline.py
backend/tests/unit/algorithms/: test_pca.py  test_preprocessing.py  test_tsne.py
backend/tests/unit/api/: test_error_handlers.py
backend/tests/unit/middleware/: test_graceful_degradation.py
backend/tests/unit/utils/: test_user_messages.py  test_validation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.js
frontend/static/: index.html
results/08e12ba2-b985-4810-a5a3-89a41f8cae6a/: processing_metadata.json
results/24eb8ba5-a306-4939-bffc-1c82b6ecba1e/: processing_metadata.json
results/2f442fcd-cbe7-443a-aa0e-df109d06232c/: processing_metadata.json
temp/: upload_5mhvgcj9.csv
(+52 files in other folders)
